--- a/package.json
+++ b/package.json
@@ -266,6 +266,10 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
   },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "main": ".workspace_write_pkg.js",
   "directories": {
     "doc": "docs"
