--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         working-directory: backend
 
       - name: Security audit (moderate+)
-        run: npm audit --omit=dev --audit-level=moderate || true
+        run: npm audit --omit=dev --audit-level=moderate
         working-directory: backend
 
   build-test-lint:
@@ -61,9 +61,6 @@ jobs:
           node-version: "20"
           cache: "npm"
 
-      - name: Install root dependencies
-        run: npm ci
-
       - name: Install backend dependencies
         run: npm ci
         working-directory: backend
@@ -91,7 +88,9 @@ jobs:
         working-directory: backend
 
       - name: Lint
-        run: npm run lint || true
+        run: npm run lint
+        working-directory: backend
 
       - name: Build
-        run: npm run build || true
+        run: npm run build
+        working-directory: backend
